--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,19 +1,44 @@
 {
   "name": "googlebooks-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Google Books search and management application",
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build",
-    "render-build":"npm install && npm run build"
+    "render-build": "npm install && npm run build"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "google",
+    "books",
+    "search",
+    "management"
+  ],
+  "author": "ImperialSpaceCoalition",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.4",
+    "react-router-dom": "^5.3.0",
+    "@apollo/client": "^3.5.0",
+    "graphql": "^15.6.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.2"
+    
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": ""
   }
 }
+
